# qt5-display-test

./: CMakeLists.txt
src/: main.cpp
